# material-color-utilities

./: .gitignore  CONTRIBUTING.md  POUPE.md  README.md  color_spaces.md  contrast.md  extract_colors.md  go.mod  hctconverter.go  make_schemes.md  package.json  pnpm-lock.yaml  pull_request_template.md  sitemap.md
cpp/: CMakeLists.txt
cpp/blend/: blend.cc  blend.h  blend_test.cc
cpp/cam/: cam.cc  cam.h  cam_test.cc  hct.cc  hct.h  hct_solver.cc  hct_solver.h  hct_solver_test.cc  hct_test.cc  viewing_conditions.cc  viewing_conditions.h
cpp/contrast/: contrast.cc  contrast.h  contrast_test.cc
cpp/dislike/: dislike.cc  dislike.h  dislike_test.cc
cpp/dynamiccolor/: contrast_curve.h  dynamic_color.cc  dynamic_color.h  dynamic_color_test.cc  dynamic_scheme.cc  dynamic_scheme.h  material_dynamic_colors.cc  material_dynamic_colors.h  tone_delta_constraint.h  tone_delta_pair.h  variant.h
cpp/palettes/: core.cc  core.h  core_test.cc  tones.cc  tones.h  tones_test.cc
cpp/quantize/: celebi.cc  celebi.h  celebi_test.cc  lab.cc  lab.h  wsmeans.cc  wsmeans.h  wsmeans_test.cc  wu.cc  wu.h  wu_test.cc
cpp/scheme/: dynamic_scheme.cc  dynamic_scheme.h  scheme.cc  scheme.h  scheme_content.cc  scheme_content.h  scheme_content_test.cc  scheme_expressive.cc  scheme_expressive.h  scheme_expressive_test.cc  scheme_fidelity.cc  scheme_fidelity.h  scheme_fidelity_test.cc  scheme_fruit_salad.cc  scheme_fruit_salad.h  scheme_fruit_salad_test.cc  scheme_monochrome.cc  scheme_monochrome.h  scheme_monochrome_test.cc  scheme_neutral.cc  scheme_neutral.h  scheme_neutral_test.cc  variant.h  (+10 more)
(+568 files in other folders)
